--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
-streamlit
-pandas
-Pillow
-seaborn
-numpy
-matplotlib
-nltk
-spacy
-textblob
-tqdm
-gensim
-catboost
-scikit-learn
-xgboost
-emoji
-contractions
-cupy-cuda11x
+pandas==2.1.4
+Pillow==10.2.0
+seaborn==0.12.2
+numpy==1.26.4
+matplotlib==3.8.0
+nltk==3.9.1
+spacy==3.7.5
+textblob==0.19.0
+tqdm==4.65.0
+gensim==4.3.0
+catboost==1.2.7
+scikit-learn==1.2.2
+xgboost==2.1.3
+emoji==2.14.1
+contractions==0.1.73
